test/sema/typeck/module/class-static-method-not-accessible.out
error: element is not accessible.
--> class-static-method-not-accessible.dora:1:10
 | fn f() { foo::Foo::bar(); }
            ~~~~~~~~~~~~~~~
 | mod foo {
 |     pub class Foo
1 error found.
