test/sema/typeck/module/class-static-method-not-accessible.dora
fn f() { foo::Foo::bar(); }
mod foo {
    pub class Foo
    impl Foo { static fn bar() {} }
}
